fix: Fix overflow

--- a/src/app/base-elements/empty-items/empty-items.component.scss
+++ b/src/app/base-elements/empty-items/empty-items.component.scss
@@ -1,5 +1,5 @@
 .empty-items {
-  min-height: 90vh;
+  height: 84.5vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
