--- a/src/app/event/event-info/event-info.component.scss
+++ b/src/app/event/event-info/event-info.component.scss
@@ -1,7 +1,7 @@
 ::ng-deep {
   .sidenav-content {
     main {
-      height: calc(100% - 56px);
+      height: calc(100% - 64px);
     }
 
     .mat-tab-group {
